[workspace]
members = ["rust/crates/mc-lint-attr", "rust/crates/mc-lint"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["monte-carlo", "lint", "performance", "static-analysis"]
categories = ["development-tools"]


[profile.release]
debug = false
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"
