[workspace]
members = ["rust/crates/mc-lint-attr", "rust/crates/mc-lint"]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/iamorlando/mc_lint"
homepage = "https://github.com/iamorlando/mc_lint"
keywords = ["monte-carlo", "lint", "performance", "static-analysis"]
categories = ["development-tools"]


[profile.release]
debug = false
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"
