[package]
name = "mc-lint-attr"
description = "Proc-macro implementation details for mc-lint marker attributes."
documentation = "https://github.com/iamorlando/mc_lint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
