[package]
name = "mc-lint"
description = "CLI linter and marker attributes for checking Monte Carlo simulation hot paths."
documentation = "https://docs.rs/mc-lint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "mc-lint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
mc-lint-attr = { version = "0.1.0", path = "../mc-lint-attr" }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit"] }
walkdir = "2.5"
